# fishfactory

./: .dockerignore  .gitignore  Dockerfile  README.md  alerter.py  config_example.json  docker-compose.yml  fishfactory.py  fishfactory_API.py  fishfactory_api.py  foreman.py  input  inputs  processor.py  requirements.txt  shodan_api_wrapper.py  target_cycler.py  x.py
fileprocessor/: Cargo.toml  Dockerfile
fileprocessor/src/: main.rs
fishfactory_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
fishfactory_scrapy/spiders/: brute_spider.py  downloader_spider.py  spotter_spider.py
kitprocessor/: Cargo.toml  Dockerfile
kitprocessor/src/: main.rs
routines/: brute.py  downloader.py  reconaissance.py
templates/: index.html
utils/: generate_api_key.py
