[package]
name = "fileprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
walkdir = "2.3.2"
zip = "0.6.4"
